# screen_reminder

./: Cargo.toml  README.md  build.rs  reminders.toml
.github/workflows/: windows-release.yml
src/: config.rs  logging.rs  main.rs  scheduler.rs  startup.rs  window.rs
ui/: app.slint  reminder.slint  tray.slint
