[package]
name = "screen_reminder"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = { version = "1.17", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-femtovg",
    "renderer-software",
    "compat-1-2",
    "system-tray",
] }
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
slint-build = "1.8"
